fix: overflowing navigation background

--- a/src/app/_components/organisms/Navigation/Header.module.scss
+++ b/src/app/_components/organisms/Navigation/Header.module.scss
@@ -2,6 +2,7 @@
   --padding-inline: 3.5rem;
   --content-max-width: 98rem;
 
+  overflow-x: hidden;
   position: sticky;
   z-index: 2;
   top: 0;
